--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="grid-container">
         <div class="grid-item header">Header</div>
-        <div class="grid-item sidebar">Side Bar</div>
+        <div class="grid-item sidebar">Sidebar</div>
         <div class="grid-item main">Main</div>
         <div class="grid-item treatment">Treatment</div>
         <div class="grid-item content">Content</div>
